2008-05-16 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Big update, working ongoing.

        * www/robonet-1.0/cgi-bin/graphs.cgi: Google Chart version of the
	  performance.cgi sript. Meant to be consumed by the istar stuff.

2008-05-14 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Big update, working ongoing.

2008-05-13 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/count.cgi & single.cgi: Incremental query
	  tools into the Microlensing UA backend.
	  
2008-04-29 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_servers.pl & bin/test_servers_gsm.pl: Added Brad as a contact
	  for UKIRT and changed pinging for www.estar.org.uk to poll webserver
	  
2008-04-09 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/JACH/Handler.pm: Changed offset from -795 to -720 arcsec

2008-04-05 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Used WWW::Shorten to encode event URLs for
	  sending to twitter.com

	* eSTAR/Broker/Handler.pm: Ditto.

2008-04-05 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Added twittering
	
	* eSTAR/Broker/Handler.pm: Added twittering
	
	* bin/test_servers_gsm.pl: Bug fix eSTAR::GSM->send_sms() should be
	  a class call eSTAR::GSM::send_sms().
	  
2008-04-04 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/robonet-1.0 & www/estar: Added GeochronApplet.jar and associated
	  jpeg files into the two web directories
	  
	* bin/.cvsignore: Added .DS_Store to ignore list.  

2008-03-25 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_servers.pl: Updated to FTP end point to estar.org.uk
	
	* bin/raptor_alert.pl: Updated to FTP end point to estar.org.uk

	* bin/event_broker.pl: Updated to FTP end point to estar.org.uk
		
	* eSTAR/Broker/Handler.pm: Updated to FTP end point to estar.org.uk

	* demo/google_sky/event_client.pl: Updated to FTP end point

2008-03-19 Eric Saunders <saunders@astro.ex.ac.uk>

        * eSTAR/VT/Handler.pm, eSTAR/VT.pm: Abstracted functionality not 